DETER and PRODES data integrated into one dataset.

--- a/inst/extdata/slides/exploratory_data_analysis/eda.tex
+++ b/inst/extdata/slides/exploratory_data_analysis/eda.tex
@@ -101,7 +101,7 @@ Brazilian Amazon}
     \begin{figure}[h] 
         \includegraphics[width=0.60\linewidth]
         {./images/sample_deter_subareas.png}
-        \caption{From 3 DETER we get 7 subareas!}
+        \caption{From 3 DETER warnings, we get 7 subareas!}
         \label{fig:deter_subareas}
     \end{figure}
 \end{frame}
