Tables of top trajectories added.

--- a/inst/extdata/slides/exploratory_data_analysis/eda.tex
+++ b/inst/extdata/slides/exploratory_data_analysis/eda.tex
@@ -200,8 +200,9 @@ Brazilian Amazon}
         \label{fig:deter_subarea_trajectory_2}
     \end{figure}
 \end{frame}
+
 \begin{frame}[allowframebreaks]
-    \frametitle{DETER subareas (2 warnings)}
+    \frametitle{DETER - Top 10 trajectories (2 warnings)}
     \input{./tables/tb_deter_subarea_trajectory_2.tex}
 \end{frame}
 
@@ -214,8 +215,9 @@ Brazilian Amazon}
         \label{fig:deter_subarea_trajectory_3}
     \end{figure}
 \end{frame}
+
 \begin{frame}[allowframebreaks]
-    \frametitle{DETER subareas (3 warnings)}
+    \frametitle{DETER - Top 10 trajectories (3 warnings)}
     \input{./tables/tb_deter_subarea_trajectory_3.tex}
 \end{frame}
 
@@ -228,8 +230,9 @@ Brazilian Amazon}
         \label{fig:deter_subarea_trajectory_4}
     \end{figure}
 \end{frame}
+
 \begin{frame}[allowframebreaks]
-    \frametitle{DETER subareas (4 warnings)}
+    \frametitle{DETER - Top 10 trajectories (4 warnings)}
     \input{./tables/tb_deter_subarea_trajectory_4.tex}
 \end{frame}
 
@@ -242,8 +245,9 @@ Brazilian Amazon}
         \label{fig:deter_subarea_trajectory_5}
     \end{figure}
 \end{frame}
+
 \begin{frame}[allowframebreaks]
-    \frametitle{DETER subareas (5 warnings)}
+    \frametitle{DETER - Top 10 trajectories (5 warnings)}
     \input{./tables/tb_deter_subarea_trajectory_4.tex}
 \end{frame}
 
@@ -252,7 +256,7 @@ Brazilian Amazon}
 \subsection{Trajectories (DETER \& PRODES)} 
 
 \begin{frame}
-    \frametitle{DETER \& PRODES subareas (2 warnings)}
+    \frametitle{DETER \& PRODES - Top 10 trajectories (2 warnings)}
     \begin{figure}[h] 
         \includegraphics[width=0.65\linewidth]
         {./figures/plot_deter_prodes_subarea_trajectory_2.png}
@@ -260,8 +264,9 @@ Brazilian Amazon}
         \label{fig:deter_prodes_subarea_trajectory_2}
     \end{figure}
 \end{frame}
+
 \begin{frame}[allowframebreaks]
-    \frametitle{DETER \& PRODES subareas (2 warnings)}
+    \frametitle{DETER \& PRODES - Top 10 trajectories (2 warnings)}
     \input{./tables/tb_deter_prodes_subarea_trajectory_2.tex}
 \end{frame}
 
@@ -274,11 +279,11 @@ Brazilian Amazon}
         \label{fig:deter_prodes_subarea_trajectory_3}
     \end{figure}
 \end{frame}
+
 \begin{frame}[allowframebreaks]
-    \frametitle{DETER \& PRODES subareas (3 warnings)}
+    \frametitle{DETER \& PRODES - Top 10 trajectories (3 warnings)}
     \input{./tables/tb_deter_prodes_subarea_trajectory_3.tex}
 \end{frame}
-
 
 \begin{frame}
     \frametitle{DETER \& PRODES subareas (4 warnings)}
@@ -289,11 +294,11 @@ Brazilian Amazon}
         \label{fig:deter_prodes_subarea_trajectory_4}
     \end{figure}
 \end{frame}
+
 \begin{frame}[allowframebreaks]
-    \frametitle{DETER \& PRODES subareas (4 warnings)}
+    \frametitle{DETER \& PRODES - Top 10 trajectories (4 warnings)}
     \input{./tables/tb_deter_prodes_subarea_trajectory_4.tex}
 \end{frame}
-
 
 \begin{frame}
     \frametitle{DETER \& PRODES subareas (5 warnings)}
@@ -304,11 +309,11 @@ Brazilian Amazon}
         \label{fig:deter_prodes_subarea_trajectory_5}
     \end{figure}
 \end{frame}
+
 \begin{frame}[allowframebreaks]
-    \frametitle{DETER \& PRODES subareas (5 warnings)}
+    \frametitle{DETER \& PRODES - Top 10 trajectories (5 warnings)}
     \input{./tables/tb_deter_prodes_subarea_trajectory_5.tex}
 \end{frame}
-
 
 \begin{frame}
     \frametitle{DETER \& PRODES subareas (6 warnings)}
@@ -319,8 +324,9 @@ Brazilian Amazon}
         \label{fig:deter_prodes_subarea_trajectory_6}
     \end{figure}
 \end{frame}
+
 \begin{frame}[allowframebreaks]
-    \frametitle{DETER \& PRODES subareas (6 warnings)}
+    \frametitle{DETER \& PRODES - Top 10 trajectories (6 warnings)}
     \input{./tables/tb_deter_prodes_subarea_trajectory_6.tex}
 \end{frame}
 
