Time proximity PRODES-DETER added.

--- a/inst/extdata/slides/exploratory_data_analysis/eda.tex
+++ b/inst/extdata/slides/exploratory_data_analysis/eda.tex
@@ -87,6 +87,27 @@ Brazilian Amazon}
 \end{frame}
 
 \begin{frame}
+    \frametitle{DETER warnings by class}
+    \begin{figure}[h]
+        \includegraphics[width=0.65\linewidth]
+        {./figures/plot_deter_area_by_class.png}
+        \label{fig:deter_area_by_class}
+        \caption{Burn scars and clear cut are the most common warnings.}
+    \end{figure}
+\end{frame}
+
+\begin{frame}
+    \frametitle{DETER warnings by class and state}
+    \begin{figure}[h]
+        \includegraphics[width=0.65\linewidth]
+        {./figures/plot_deter_area_by_class_state.png}
+        \label{fig:deter_area_by_class_state}
+        \caption{Burn scars and clear cut are the most common warnings.}
+    \end{figure}
+\end{frame}
+
+
+\begin{frame}
     \frametitle{DETER warnings and time}
     \begin{itemize}
         \item The spatial properties of DETER warning are inconsistent along 
@@ -330,6 +351,10 @@ Brazilian Amazon}
     \input{./tables/tb_deter_prodes_subarea_trajectory_6.tex}
 \end{frame}
 
+\begin{frame}[allowframebreaks]
+    \frametitle{DETER \& PRODES - Top 10 proximity in time}
+    \input{./tables/tb_prodes_deter_time_proximity.tex}
+\end{frame}
 
 
 
